tests/baselines/reference/objectLiteralWithSemicolons4.errors.txt
objectLiteralWithSemicolons4.ts(2,3): error TS18004: No value exists in scope for the shorthand property 'a'. Either declare one or provide an initializer.
objectLiteralWithSemicolons4.ts(3,1): error TS1005: ',' expected.


==== objectLiteralWithSemicolons4.ts (2 errors) ====
    var v = {
      a
      ~
!!! error TS18004: No value exists in scope for the shorthand property 'a'. Either declare one or provide an initializer.
    ;
    ~
!!! error TS1005: ',' expected.